# mgn-black-hole-subnet

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
scripts/: dev-shell
scripts/naclmaker/: README.md  example-rules.csv  naclmaker.sh
src/naclmaker/: aws.py  cli.py  models.py  render.py
tests/: conftest.py  test_aws.py  test_cli.py  test_models.py
